--- a/test/runner.html
+++ b/test/runner.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <meta charset="utf-8">
 <title>Jasmine Spec Runner v2.4.1</title>
 
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
 <link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
+<link rel="stylesheet" href="../build/mobile-nav.css">
+
+<style>
+    .jasmine_html-reporter {
+        position: relative;
+        z-index: -1;
+    }
+</style>
 
 <script src="lib/jasmine-2.4.1/jasmine.js"></script>
 <script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
@@ -12,3 +20,103 @@
 <!-- include spec files here... -->
 <script src="../build/es5-mobile-nav.js"></script>
 <script src="mobileNavSpec.js"></script>
+
+<nav class="MobileNav">
+    <a href="/needlink">nav link</a>
+    <a href="/needlink">nav link</a>
+    <section>
+        <header>nav header 1</header>
+        <div class="MobileNav-sub">
+            <section>
+                <header>nav header 1.1</header>
+                <div class="MobileNav-sub">
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                </div>
+            </section>
+            <section>
+                <header>nav header 1.2</header>
+                <div class="MobileNav-sub">
+                    <a href="/needlink">nav link</a>
+                    <section>
+                        <header>nav header 1.2.1</header>
+                        <div class="MobileNav-sub">
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                        </div>
+                    </section>
+                    <section>
+                        <header>nav header 1.2.2</header>
+                        <div class="MobileNav-sub">
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                            <a href="/needlink">nav link</a>
+                        </div>
+                    </section>
+                    <a href="/needlink">nav link</a>
+                </div>
+            </section>
+            <section>
+                <header>nav header 1.3</header>
+                <div class="MobileNav-sub">
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                </div>
+            </section>
+        </div>
+    </section>
+    <a href="/needlink">nav link</a>
+    <section>
+        <header>nav header 2</header>
+        <div class="MobileNav-sub">
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+            <section>
+                <header>nav header 2.1</header>
+                <div class="MobileNav-sub">
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                </div>
+            </section>
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+        </div>
+    </section>
+    <section>
+        <header>nav header 3</header>
+        <div class="MobileNav-sub">
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+            <section>
+                <header>nav header 3.1</header>
+                <div class="MobileNav-sub">
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                    <a href="/needlink">nav link</a>
+                </div>
+            </section>
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+            <a href="/needlink">nav link</a>
+        </div>
+    </section>
+    <a href="/needlink">nav link</a>
+    <a href="/needlink">nav link</a>
+</nav>
