add selector for header trigger (default to header itself). refactor build process.

--- a/test/runner.html
+++ b/test/runner.html
@@ -4,7 +4,7 @@
 
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
 <link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
-<link rel="stylesheet" href="../build/mobile-nav.css">
+<link rel="stylesheet" href="../dist/index.css">
 
 <style>
     .jasmine_html-reporter {
@@ -18,7 +18,7 @@
 <script src="lib/jasmine-2.4.1/boot.js"></script>
 
 <!-- include spec files here... -->
-<script src="../build/es5-mobile-nav.js"></script>
+<script src="../dist/index.js"></script>
 <script src="mobileNavSpec.js"></script>
 
 <nav class="MobileNav">
